Submitting first draft for review

--- a/templates/pandoc-template-html.html
+++ b/templates/pandoc-template-html.html
@@ -45,7 +45,7 @@ $endif$
 $for(author)$
 <p class="author">By $author$</p>
 $endfor$
-<p class="date">This paper will be presented at the <a href="https://2020.programming-conference.org/home/salon-2020">Convivial Computing Salon 2020</a> workshop.<br />Also available in a <a href="paper.pdf">PDF version</a>.</p>
+<p class="date">This paper will be presented at the <a href="https://2021.programming-conference.org/home/px-2021">PX/21</a> workshop. Also available in a <a href="paper.pdf">PDF version</a>.</p>
 </header>
 $endif$
 $if(toc)$
