--- a/basic.css
+++ b/basic.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.5em;
   padding: 1em;
   margin: auto;
-  max-width: 50em;
+  max-width: 40em;
   background: #fefefe;
 }
 
@@ -237,12 +237,19 @@ img {
 figure {
   display: block;
   text-align: center;
-  margin: 1em 0;
+  width: 70vw;
+  max-width: 1500px;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  padding: 15px;
+  margin: 30px -35vw;
+  border: solid thin #ddd;
 }
 
 figure img {
   border: none;
-  margin: 0 auto;
+  margin: 15px auto;
 }
 
 figcaption {
